--- a/askj_frontend/package.json
+++ b/askj_frontend/package.json
@@ -4,7 +4,7 @@
   "description": "> Webpack 4 tutorial: All You Need to Know, from 0 Conf to Production Mode",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack-dev-server --mode development --config webpack.config.js --open",
     "build": "webpack --mode production"
   },
   "repository": {
@@ -19,21 +19,27 @@
   },
   "homepage": "https://github.com/valentinogagliardi/webpack-4-quickstart#readme",
   "devDependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "cors": "^2.8.4",
     "css-loader": "^0.28.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.7",
+    "http-proxy-middleware": "^0.18.0",
     "mini-css-extract-plugin": "^0.2.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-promise": "^0.6.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@koa/cors": "^2.2.1"
+  }
 }
