--- a/askj_frontend/package.json
+++ b/askj_frontend/package.json
@@ -40,6 +40,7 @@
     "webpack-dev-server": "^3.1.1"
   },
   "dependencies": {
-    "@koa/cors": "^2.2.1"
+    "@koa/cors": "^2.2.1",
+    "react-sparklines": "^1.6.0"
   }
 }
